<resources>
    <string name="app_name">AndroidGaya</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_uppercase">Description</string>
    <string name="description">description</string>
    <string name="description_header">Description:</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="reminder_name_header">Reminder Name:</string>
    <string name="date">date</string>
    <string name="name_uppercase">Name</string>
    <string name="name">name</string>
    <string name="time_uppercase">Time</string>
    <string name="time">time</string>
    <string name="day_uppercase">Day</string>
    <string name="day">day</string>
    <string name="header_uppercase">Header</string>
    <string name="header">header</string>
    <string name="add">add</string>
    <string name="picture">picture</string>
    <string name="username_uppercase">Username</string>
    <string name="password_uppercase">Password</string>
    <string name="login">Login</string>
    <string name="isLoggedIn">isLoggedIn</string>
    <string name="user_details_sp" translatable="false">userDetailsSP</string>
    <string name="profile">Profile</string>
    <string name="select_valid_time_msg">please select a valid time for your reminder</string>
    <string name="enter_name_msg">please enter a name for your reminder</string>
    <string name="add_msg">reminder added</string>
    <string name="update_msg">reminder updated</string>
    <string name="id_uppercase">Id</string>
    <string name="tomorrow_msg">past time selected. setting reminder date to tomorrow</string>
    <string name="toolbar_main">Hello %1$s</string>
    <string name="add_rem">Add Reminder</string>
    <string name="edit_rem">Edit Reminder</string>
    <string name="user_exists">user exists</string>
    <string name="save">save</string>
    <string name="logout_uppercase">Logout</string>
    <string name="logout">logout</string>
    <string name="full_date">dd/MM/yyyy</string>
    <string name="words_date">EEE, MMM d</string>
    <string name="day_date">EEEE</string>
    <string name="hour">HH:mm</string>
    <string name="allUsersSP">allUsersSP</string>
    <string name="wrong_login">wrong password</string>
    <string name="timestamp">timestamp</string>
    <string name="notification">notification</string>
    <string name="reason">reason</string>
    <string name="msg_rem_not_found">Error reminder doesn\'t exist</string>
    <string name="UserId">UserId</string>
    <string name="create_reminder">createReminder</string>
    <string name="edit_reminder">editReminder</string>
    <string name="delete_reminder">deleteReminder</string>
    <string name="create_user">createUser</string>
    <string name="change_username">changeUsername</string>
    <string name="change_username_if_able">changeUsernameIfAble</string>
    <string name="change_username_only">changeUsernameOnly</string>
    <string name="get_all_users">getAllUsers</string>
    <string name="username">username</string>
    <string name="userid">userId</string>
    <string name="password">password</string>
    <string name="id">id</string>
    <string name="get_all_reminders">getAllReminders</string>
    <string name="update_users">updateUsers</string>
    <string name="connect_user">connectUser</string>
    <string name="reminders">reminders</string>
    <string name="created_at">createdAt</string>
    <string name="Service_start_arguments">ServiceStartArguments</string>
    <string name="Reminders_database">RemindersDatabase</string>
    <string name="login_viewmodel_path">com.example.androidgaya.login.viewmodel.LoginViewModel</string>
    <string name="details_viewmodel_path">com.example.androidgaya.details.viewmodel.DetailsViewModel</string>
    <string name="main_viewmodel_path">com.example.androidgaya.main.viewmodel.MainViewModel</string>
    <string name="profile_viewmodel_path">com.example.androidgaya.profile.viewmodel.ProfileViewModel</string>
    <string name="socket_uri">http://10.210.229.182:3456</string>
    <string name="user_id">userId</string>
    <string name="on_get_all_reminders">OnGetAllReminders</string>
    <string name="empty_json">[]</string>
    <string name="on_create_reminder">onCreateReminder</string>
    <string name="on_edit_reminder">onEditReminder</string>
    <string name="on_delete_reminder">onDeleteReminder</string>
    <string name="on_change_username">onChangeUsername</string>

</resources>